--- a/etcd/tls-bootstrap/job.yaml
+++ b/etcd/tls-bootstrap/job.yaml
@@ -15,84 +15,26 @@ spec:
             - -ec
             - |
               cd /secrets/tls
+              template_json='$(cfssl-tls-template.json)'
+              echo '$(cfssl-ca-config.json)' > ca-config.json
 
-              echo '
-              {
-                "CN": "etcd-ca",
-                "key": {
-                  "algo": "rsa",
-                  "size": 2048
-                }
-              }' | \
-                cfssl gencert -initca - | \
-                cfssljson -bare ca -
+              cfssl_gencert_ca() {
+                name="${1}"
+                echo "${template_json}" | sed "s/_NAME_/etcd-${name}/g" | \
+                  cfssl gencert -initca - | cfssljson -bare ca -
+              }
 
-              echo '
-              {
-                "signing": {
-                  "default": {
-                    "expiry": "43800h",
-                    "usages": [
-                      "signing",
-                      "key encipherment",
-                      "server auth",
-                      "client auth"
-                    ]
-                  }
-                }
-              }' > ca-config.json
+              cfssl_gencert() {
+                name="${1}"
+                echo "${template_json}" | sed "s/_NAME_/etcd-${name}/g" | \
+                  cfssl gencert -config=ca-config.json -ca=ca.pem -ca-key=ca-key.pem -hostname="${2}" - | \
+                  cfssljson -bare "${name}"
+              }
 
-              addresses="localhost,127.0.0.1,0:0:0:0:0:0:0:1,${SVC_NAME}"
-
-              if [ -n "${VIP_FQDN}" ]; then
-                addresses="${addresses},${VIP_FQDN}"
-              fi
-
-              last="$((REPLICAS - 1))"
-              for i in $(seq 0 "${last}"); do
-                addresses="${addresses},${STS_NAME}-${i}"
-                addresses="${addresses},${STS_NAME}-${i}.${SVC_NAME}"
-                addresses="${addresses},${STS_NAME}-${i}.${SVC_NAME}.${NAMESPACE}.svc.${K8S_CLUSTER_DOMAIN}"
-              done
-
-              name=server
-              echo '
-              {
-                "CN": "'${name}'",
-                "hosts": [""],
-                "key": {
-                  "algo": "rsa",
-                  "size": 2048
-                }
-              }' | \
-                cfssl gencert -config=ca-config.json -ca=ca.pem -ca-key=ca-key.pem -hostname="${addresses}" - | \
-                cfssljson -bare "${name}"
-
-              name=peer
-              echo '
-              {
-                "CN": "'${name}'",
-                "hosts": [""],
-                "key": {
-                  "algo": "rsa",
-                  "size": 2048
-                }
-              }' | \
-                cfssl gencert -config=ca-config.json -ca=ca.pem -ca-key=ca-key.pem -hostname="${addresses}" - | \
-                cfssljson -bare "${name}"
-
-              name=client
-              echo '
-              {
-                "CN": "'${name}'",
-                "hosts": [""],
-                "key": {
-                  "algo": "rsa",
-                  "size": 2048
-                }
-              }' | \
-                cfssl gencert -config=ca-config.json -ca=ca.pem -ca-key=ca-key.pem -hostname="" - | \
-                cfssljson -bare "${name}"
+              cfssl_gencert_ca ca
+              cfssl_gencert server "${TLS_HOSTS}"
+              cfssl_gencert peer "${TLS_HOSTS}"
+              cfssl_gencert client ""
 
               mv ca-key.pem ca.key
               mv ca.pem ca.crt
